--- a/index.html
+++ b/index.html
@@ -56,6 +56,28 @@
           <h2 class="main-title">Packaging R for WebAssembly</h1>
         </section>
 
+        <section>
+          <h2>WebR</h2>
+          <div class="two-column">
+            <div class="column">
+              <ul>
+                <li>Emscripten</li>
+                <li>Fortran compiler</li>
+                <ul>
+                  <li>Custom development version of <strong>LLVM Flang</strong></li>
+                  <li><code>gfortran</code> and Dragonegg</li>
+                </ul>
+              </ul>
+            </div>
+            <div class="column">
+                <img class="image-transparent" src="/src/images/webr.png"
+                  alt="webr logo - purple webassembly square with R-wa">
+                <img class="image-transparent" src="/src/images/rwasm.png"
+                  alt="rwasm logo - truck with packages">
+            </div>
+          </div>
+        </section>
+
         <section data-markdown>
           <textarea data-template>
             ## Slide 1
