Add core deps slide

--- a/index.html
+++ b/index.html
@@ -70,10 +70,49 @@
               </ul>
             </div>
             <div class="column">
-                <img class="image-transparent" src="/src/images/webr.png"
+                <img src="/src/images/webr.png"
                   alt="webr logo - purple webassembly square with R-wa">
-                <img class="image-transparent" src="/src/images/rwasm.png"
+                <img src="/src/images/rwasm.png"
                   alt="rwasm logo - truck with packages">
+            </div>
+          </div>
+        </section>
+
+        <section>
+          <h2>Core Dependencies of R</h2>
+          <div class="two-column">
+            <div class="column-top-align">
+              <img src="/src/images/c_logo.svg" alt="C language logo" style="height: 4em;">
+              <ul>
+                <li style="margin: 0;">Required</li>
+                <ul>
+                  <li><code>libiconv</code></li>
+                  <li><code>zlib</code></li>
+                  <li><code>bzip2</code></li>
+                  <li><code>lzma</code></li>
+                  <li><code>pcre2</code></li>
+                </ul>
+                <li style="margin: 0;">Optional</li>
+                <ul>
+                  <li><code>libpng</code></li>
+                  <li><code>cairo</code></li>
+                  <li><code>libtiff</code></li>
+                  <li><code>glib</code></li>
+                </ul>
+              </ul>
+            </div>
+            <div class="column-top-align">
+              <img src="/src/images/fortran_logo.svg" alt="Fortran language logo" style="height: 4em;">
+              <ul>
+                <li style="margin: 2em 0 0">Required</li>
+                <ul>
+                  <li>BLAS / LAPACK</li>
+                </ul>
+                <li style="margin: 1em 0 0;">R packages</li>
+                <ul>
+                  <li><code>nlme</code></li>
+                </ul>
+              </ul>
             </div>
           </div>
         </section>
