Add Fortran to wasm slide

--- a/index.html
+++ b/index.html
@@ -117,15 +117,21 @@
           </div>
         </section>
 
-        <section data-markdown>
-          <textarea data-template>
-            ## Slide 1
-            A paragraph with some text
-            ---
-            ## Slide 2
-            ---
-            ## Slide 3
-          </textarea>
+        <section>
+          <h2>Fortran to WebAssembly</h2>
+          <div class="two-column">
+            <div class="column">
+              <h3>LLVM Flang</h3>
+              <ul>
+                <li>Modern LLVM Integration</li>
+                <li>Active Development</li>
+                <li>WebAssembly Target Support</li>
+              </ul>
+            </div>
+            <div class="column">
+              <img src="/src/images/llvm_wyvern.png" alt="LLVM logo of wyvern dragon">
+            </div>
+          </div>
         </section>
 
 
