--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@
           <h2 class="main-title">Packaging GNU Octave for WebAssembly</h1>
         </section>
 
+        <section>
+          <h2>Xeus-Octave-Lite</h2>
+          <div class="jlite-iframe">
+            <iframe src="https://isabelparedes.github.io/pydata2025-octave/lab/?path=demo.ipynb" width="100%" height="100%" style="border: none;"></iframe>
+          </div>
+          <p style="font-size: 0.5em;"><a href="https://isabelparedes.github.io/pydata2025-octave/lab/?path=demo.ipynb" target="_blank">[open in new tab]</a></p>
+        </section>
+
         <section class="cosmo-slide">
           <img src="/src/images/cosmo_fly.png" alt="QuantStack Logo" class="cosmo-img">
           <h2 class="main-title">JupyterLite Terminal</h1>
