--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               </code></pre>
             </div>
             <div class="column" style="width: 50%;">
-<p><a href="https://github.com/emscripten-forge/recipes/blob/main/recipes/recipes_emscripten/r-base/build.sh" target="_blank"><code>build.sh</code></a></p>
+              <p><a href="https://github.com/emscripten-forge/recipes/blob/main/recipes/recipes_emscripten/r-base/build.sh" target="_blank"><code>build.sh</code></a></p>
               <pre><code data-trim data-line-numbers class="language-bash">
               #-------------------------------------------------------------------------------
               # PHASE 1
@@ -381,6 +381,52 @@
             </div>
           </div>
           <img src="/src/images/package-r.svg" alt="Cardboard box with R language logo" height="30%">
+        </section>
+
+        <section>
+          <h2>Expanding the R Ecosystem</h2>
+          <div class="two-column">
+            <div class="column" style="width: 60%;">
+              <ul>
+                <li>Pure R packages, "<strong>noarch</strong>" packages, from <code>conda-forge</code> work instantly</li>
+                <li>Packages that need to be compiled require new recipes on <code>emscripten-forge</code></li>
+                <ul>
+                  <li><code>r-askpass</code></li>
+                  <li><code>r-base64enc</code></li>
+                  <li><code>r-cachem</code></li>
+                  <li><code>r-cli</code></li>
+                  <li><code>r-nlme</code></li>
+                  <li><code>r-rlang</code></li>
+                  <li>... and many more</li>
+                </ul>
+              </ul>
+            </div>
+            <div class="column">
+              <pre><code data-trim data-line-numbers="11|15" class="language-yaml">
+              package:
+                name: r-bit
+                version: 4.6.0
+
+              source:
+                url: https://cran.r-project.org/src/contrib/bit_4.6.0.tar.gz
+                sha256: 48fe21c5d04c7b724d695eeb60074395c0c631a7fb234e2075de92471445de08
+
+              build:
+                number: 0
+                script: $R CMD INSTALL $R_ARGS .
+
+              requirements:
+                build:
+                  - cross-r-base_emscripten-wasm32
+                  - ${{ compiler('c') }}
+                  - r-base
+                host:
+                  - r-base
+                run:
+                  - r-base
+              </code></pre>
+            </div>
+          </div>
         </section>
 
         <section>
