Add xeus-r slide

--- a/index.html
+++ b/index.html
@@ -430,6 +430,23 @@
         </section>
 
         <section>
+          <h2>Xeus-R</h2>
+          <div class="two-column">
+            <div class="column">
+              <ul>
+                <li>Author: <a href="https://github.com/romainfrancois" target="_blank">Romain François</a></li>
+                <li>Powered by <code>xeus</code></li>
+              </ul>
+              <p></p>
+              <img src="/src/images/xeus-r-logo.svg" alt="Xeus-R logo" width="90%">
+            </div>
+            <div class="column">
+              <img src="/src/images/xeus-r-lab.png" class="img-shadow" alt="Example Jupyter notebook for Xeus-R kernel">
+            </div>
+          </div>
+        </section>
+
+        <section>
           <h2>Xeus-R-Lite</h2>
           <div class="jlite-iframe">
             <iframe src="https://isabelparedes.github.io/pydata2025-r/lab/?path=demo.ipynb" width="100%" height="100%" style="border: none;"></iframe>
